# radioserver

./: .gitignore  AI_BACKENDS.md  CLAUDE.md  README.md  pyproject.toml  radioserver.service
android/RadioClient/: settings.gradle.kts
android/RadioClient/app/: build.gradle.kts  proguard-rules.pro
android/RadioClient/app/src/main/: AndroidManifest.xml
android/RadioClient/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_music_note.xml
android/RadioClient/app/src/main/res/values/: strings.xml  (+1 more)
ios/RadioClient/: SmartHomeWidgetExtension.entitlements  project.yml
ios/RadioClient/RadioClient/: Info.plist  RadioClientApp.swift
ios/RadioClient/RadioClient.xcodeproj/: project.pbxproj
ios/RadioClient/RadioClient.xcodeproj/project.xcworkspace/xcuserdata/chrispriest.xcuserdatad/: UserInterfaceState.xcuserstate
ios/RadioClient/RadioClient.xcodeproj/xcuserdata/chrispriest.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/RadioClient/RadioClient/CarPlay/: CarPlaySceneDelegate.swift
ios/RadioClient/RadioClient/Models/: SongItem.swift
ios/RadioClient/RadioClient/Services/: APIService.swift  AppLogger.swift  AudioPlayer.swift  CacheManager.swift  VideoChannelPlayer.swift
ios/RadioClient/RadioClient/Views/: ChannelsView.swift  HistoryView.swift  NowPlayingView.swift  QRScannerView.swift  SettingsView.swift  VideoChannelsView.swift
ios/RadioClient/SmartHomeWidget/: SmartHomeWidget.swift  SmartHomeWidgetBundle.swift  SmartHomeWidgetControl.swift  SmartHomeWidgetLiveActivity.swift
server/: manage.py
server/radioserver/: settings.py  urls.py  wsgi.py
(+15 files in other folders)
