[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "radioserver"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2,<4.3",
    "mutagen",
    "Pillow",
    "qrcode",
    "gunicorn",
    "whitenoise",
    "openai",
    "anthropic",
    "google-genai",
]

[project.scripts]
radioserver = "manage:main"

[tool.setuptools]
py-modules = ["manage"]

[tool.setuptools.packages.find]
where = ["server"]
